tests/errors/syntax/only_keywords_or_brace_after_condition_while.odl
main :: () -> void {
    until x := 0; x == 0 then 10;
};